--- a/register/templates/register/home.html
+++ b/register/templates/register/home.html
@@ -335,19 +335,19 @@
                         <h5>ĐƠN VỊ TÀI TRỢ</h5>
                         <div class="unit_logo">
                             <div class="row">
-                                <div class="col-lg-5 col-md-5 col-sm-5 col-5">
+                                <div class="col-lg-4 col-md-4 col-sm-4 col-4">
                                     <div class="unit">
-                                        <img class="gold_sponsor" src="{% static 'register/images/footer/CS_white.png' %}">
+                                        <img class="sponsor_1" src="{% static 'register/images/footer/CS_white.png' %}">
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-4">
                                     <div class="unit">
-                                        <img class="silver_sponsor" src="{% static 'register/images/footer/CS_white.png' %}">
+                                        <img class="sponsor_2" src="{% static 'register/images/footer/CS_white.png' %}">
                                     </div>
                                 </div>
-                                <div class="col-lg-3 col-md-3 col-sm-3 col-3">
+                                <div class="col-lg-4 col-md-4 col-sm-4 col-4">
                                     <div class="unit">
-                                        <img class="bronze_sponsor" src="{% static 'register/images/footer/CS_white.png' %}">
+                                        <img class="sponsor_3" src="{% static 'register/images/footer/CS_white.png' %}">
                                     </div>
                                 </div>
                             </div>
