update sponsor logo

--- a/register/templates/register/home.html
+++ b/register/templates/register/home.html
@@ -299,7 +299,7 @@
 <!-- Giới thiệu ban tổ chức -->
 <div id="organizers" class="container-fluid">
     <div class="container">
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+        <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
             <h5>ĐƠN VỊ TỔ CHỨC</h5>
             <div class="unit_logo">
                 <div class="row">
@@ -321,6 +321,10 @@
                 </div>
             </div>
         </div>
+
+        <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12"></div>
+
+        <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12"></div>
     </div>
 </div>
 <!-- Giới thiệu ban tổ chức -->
@@ -330,7 +334,7 @@
     <div id="footer" class="container-fluid">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
                     <div class="sponsor">
                         <h5>ĐƠN VỊ TÀI TRỢ</h5>
                         <div class="unit_logo">
@@ -355,7 +359,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                     <h5>ĐƠN VỊ HỖ TRỢ</h5>
                     <div style="text-align: center; align-items: center;">
                         <img style ="width: 20%;" src="{% static 'register/images/footer/Doan.png' %}" alt="">
