--- a/register/static/register/css/home.css
+++ b/register/static/register/css/home.css
@@ -441,6 +441,7 @@ text-decoration: none;
 
 #organizers .unit_logo .row    
 {
+  align-items: center;
   text-align: center;
 }
 
@@ -615,7 +616,7 @@ border-radius: 8px;
 
   #footer h5
   {
-  font-size: 16px;
+    font-size: 16px;
     margin-top: 30px;
     margin-bottom: 30px;
   }
