--- a/register/templates/register/home.html
+++ b/register/templates/register/home.html
@@ -242,39 +242,39 @@
         <div class="date"></div>
         <i class="icon fas fa-gamepad"></i>
         <div class="content">
-            <h2 style="font-weight: bold;">15/05 : MINI GAME 1</h2>
+            <h2 style="font-weight: bold;">16/05 - 25/05: Minigame 1 - Thu thập Sticker</h2>
             <p>
-                Theo dõi để có thể tham gia mini game với các phần quà vô cùng hấp dẫn
+                Cùng nhau sưu tập thật nhiều sticker để có cơ hội sở hữu những phần quà vô cùng hấp dẫn.
             </p>
         </div>
     </div>
     <div class="container left">
         <div class="date"></div>
-        <i class="icon fas fa-gift"></i>
+        <i class="icon fas fa-puzzle-piece"></i>
         <div class="content">
-            <h2 style="font-weight: bold;">17/05 : CÔNG BỐ KẾT QUẢ MINI GAME 1</h2>
+            <h2 style="font-weight: bold;">16/05 - 29/05: Minigame 2 - Nhanh như chớp</h2>
             <p>
-                Liên hệ trực tiếp cho ban tổ chức UCPC để có thể sở hữu những phần quà ý nghĩa
+                Mini game sẽ được diễn ra tại trường Đại học Khoa học Tự nhiên, hãy tham gia để có cơ hội sở hữu những phần quà hấp dẫn.
             </p>
         </div>
     </div>
     <div class="container right">
         <div class="date"></div>
-        <i class="icon fas fa-puzzle-piece"></i>
+        <i class="icon fas fa-gamepad"></i>
         <div class="content">
-            <h2 style="font-weight: bold;">19/05 : MINI GAME 2</h2>
+            <h2 style="font-weight: bold;">19/05 - 21/05: Minigame 2 - Nhanh như chớp</h2>
             <p>
-                Theo dõi để có thể tham gia mini game với các phần quà vô cùng hấp dẫn
+                Mini game sẽ được diễn ra tại trường Đại học Quốc Tế, hãy tham gia để có cơ hội sở hữu những phần quà hấp dẫn.
             </p>
         </div>
     </div>
     <div class="container left">
         <div class="date"></div>
-        <i class="icon fas fa-gifts"></i>
+        <i class="icon fas fa-puzzle-piece"></i>
         <div class="content">
-            <h2 style="font-weight: bold;">22/05 : CÔNG BỐ KẾT QUẢ MINI GAME 2</h2>
+            <h2 style="font-weight: bold;">23/05 - 25/05: Minigame 2 - Nhanh như chớp</h2>
             <p>
-                Liên hệ trực tiếp cho ban tổ chức UCPC để có thể sở hữu những phần quà ý nghĩa
+                Mini game sẽ được diễn ra tại trường Đại học Công nghệ Thông tin, hãy tham gia để có cơ hội sở hữu những phần quà hấp dẫn.
             </p>
         </div>
     </div>
@@ -294,7 +294,7 @@
         <div class="content">
             <h2 style="font-weight: bold;">29/05 : DIỄN RA CUỘC THI</h2>
             <p>
-                Các team tham gia cuộc thi theo hình thức offline
+                Các team tham gia cuộc thi theo hình thức offline.
             </p>
         </div>
     </div>
