--- a/register/templates/register/home.html
+++ b/register/templates/register/home.html
@@ -24,8 +24,8 @@
             <img width="100%" src="{% static 'register/images/introduction/banner2.jpg' %}">
         </div>
         <div class="carousel-item">
-            <video width="100%" autoplay muted loop>
-                <source src="{% static 'register/videos/trailer.mp4' %}" type="video/mp4">
+            <video width="100%" autoplay muted loop >
+                <source src="{% static 'register/videos/TeaserWeb.mp4' %}" type="video/mp4">
             </video>
         </div>
     </div>
