--- a/register/templates/register/home.html
+++ b/register/templates/register/home.html
@@ -16,17 +16,22 @@
 
 <!-- Slider giới thiệu -->
 <div id="introduction_slider" style="height: auto; " class="carousel slide" data-ride="carousel" data-interval="10000">
+    <ol class="carousel-indicators">
+        <li data-target="#introduction_slider" data-slide-to="0" class="active"></li>
+        <li data-target="#introduction_slider" data-slide-to="1"></li>
+        <li data-target="#introduction_slider" data-slide-to="2"></li>
+      </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
+            <video width="100%" autoplay muted loop >
+                <source src="{% static 'register/videos/TeaserWeb.mp4' %}" type="video/mp4">
+            </video>
+        </div>
+        <div class="carousel-item">
             <img width="100%" src="{% static 'register/images/introduction/banner1.jpg' %}">
         </div>
         <div class="carousel-item">
             <img width="100%" src="{% static 'register/images/introduction/banner2.jpg' %}">
-        </div>
-        <div class="carousel-item">
-            <video width="100%" autoplay muted loop >
-                <source src="{% static 'register/videos/TeaserWeb.mp4' %}" type="video/mp4">
-            </video>
         </div>
     </div>
     <a class="carousel-control-prev" href="#introduction_slider" role="button" data-slide="prev">
@@ -308,8 +313,7 @@
             <h5>ĐƠN VỊ TỔ CHỨC</h5>
             <div class="unit_logo">
                 <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-4">
-                        <div class="unit">
+             huhu           <div class="unit">
                             <img class="UIT" src="{% static 'register/images/footer/UIT_white.png' %}">
                         </div>
                     </div>
