--- a/register/templates/login/login.html
+++ b/register/templates/login/login.html
@@ -3,10 +3,8 @@
 
 {% block content %}
 <div class="container" style="margin-top: 15px;">
-	<h3>Đăng nhập</h3>
+	<h3 style="font-weight: bold; margin-bottom: 20px;">Đăng nhập</h3>
 </div>
-
-<hr>
 
 {% for message in messages %}
 <p id="messages">{{message}}</p>
