--- a/register/templates/register/main.html
+++ b/register/templates/register/main.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>UCPC</title>
+	<title>UIT Collegiate Programming Contest</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
 	<base href="/">
 
