--- a/register/templates/register/navigations.html
+++ b/register/templates/register/navigations.html
@@ -1,7 +1,7 @@
 {% extends 'register/main.html' %}
 {% load static %}
 {% block main %}
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #482b78; border-bottom: 1px rgba(255, 255, 255, 0.2) solid;">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #130820; border-bottom: 1px rgba(255, 255, 255, 0.2) solid;">
     <div class="container">
         <a class="navbar-brand" href="{% url 'register:home' %}">
             <!-- <img width="83px" height="83px" src="{% static 'register/images/introduction/logo3.jpg' %}"> -->
@@ -21,17 +21,17 @@
             </ul>
             {% if request.user.is_authenticated %}
             <div class="form-inline my-2 my-lg-0">
-                <a href="{% url 'register:profile' %}" class="btn btn-success" style="width:105px;">Hồ sơ</a>
+                <a href="{% url 'register:profile' %}" class="btn" style="width:105px;">Hồ sơ</a>
             </div>
             <div class="form-inline my-2 my-lg-0">
                 <a href="{% url 'register:logout' %}" class="btn" style = "margin-left: 5px; width:105px;">Đăng xuất</a>
             </div>
             {% else %}
             <div class="form-inline my-2 my-lg-0">
-                <a href="{% url 'register:login' %}" class="btn btn-success" style="width:105px;">Đăng nhập</a>
+                <a href="{% url 'register:login' %}" class="btn" style="width:105px;">Đăng nhập</a>
             </div>
             <div class="form-inline my-2 my-lg-0">
-                <a href="{% url 'register:register' %}" class="btn registration_btn" style = "margin-left: 5px;width:105px; border: none;">Đăng ký</a>
+                <a href="{% url 'register:register' %}" class="btn" style = "margin-left: 5px;width:105px; border: none;">Đăng ký</a>
             </div>
             {% endif %}
         </div>
