--- a/register/templates/register/register.html
+++ b/register/templates/register/register.html
@@ -5,16 +5,13 @@
 
 {% if isTimeOver %}
 <div class="container" style="margin-top: 15px;">
-	<h3>Đã hết  thời gian đăng ký!</h3>
+	<h3 style="font-weight: bold;">Đã hết  thời gian đăng ký!</h3>
 </div>
 			
-<hr>
 {% else %}
 <div class="container" style="margin-top: 15px;">
-	<h3>Đăng ký</h3>
+	<h3 style="font-weight: bold; margin-bottom: 20px;">Đăng ký</h3>
 </div>
-
-<hr>
 
 {% for message in messages %}
 <p id="messages">{{message}}</p>
@@ -178,7 +175,8 @@
 				<input id="checkbox_2" type="checkbox" style="margin: 10px 5px 10px 0;" onclick="showRPassword()">Hiển thị mật khẩu
 				<small>{{ tf.rpassword.errors }}</small>
 			</div>
-			<button type="submit" class="btn btn-primary" style="margin-top: 10px;">Đăng ký</button>
+			<input id="agree_check" onchange="document.getElementById('submit_btn').disabled = !this.checked;" type="checkbox" style="margin: 10px 5px 10px 0;" onclick="showRPassword()">Tôi đã đọc và đồng ý với <a style ="color:#4CF2D2;" target="_blank" href="https://drive.google.com/file/d/1rErKbMxKskTyqWUm8w-9lfKyr6WQ_wnI/view?usp=sharing"><b>quy định</b></a> của cuộc thi.<br>
+			<button disabled type="submit" id="submit_btn" class="btn btn-primary" style="margin-top: 10px; background-color: #4CF2D2; border-color: #4CF2D2; color: black;">Đăng ký</button>
 		</form>
 	</div>
 </div>
