--- a/register/templates/register/home.html
+++ b/register/templates/register/home.html
@@ -66,17 +66,17 @@
 
             {% if request.user.is_authenticated %}
             <div class="form-inline my-2 my-lg-0">
-                <a href="{% url 'register:profile' %}" class="btn" style="width:105px; border: none !important; border-radius: 0 !important;">Hồ sơ</a>
+                <a href="{% url 'register:profile' %}" class="btn" style="margin-right: 5px; width:105px; border: none !important; border-radius: 0 !important;">Hồ sơ</a>
             </div>
             <div class="form-inline my-2 my-lg-0">
-                <a href="{% url 'register:logout' %}" class="btn" style = "margin-left: 5px; width:105px; border: none !important; border-radius: 0 !important;">Đăng xuất</a>
+                <a href="{% url 'register:logout' %}" class="btn" style ="width:105px; border: none !important; border-radius: 0 !important;">Đăng xuất</a>
             </div>
             {% else %}
             <div class="form-inline my-2 my-lg-0">
-                <a href="{% url 'register:login' %}" class="btn" style="width:105px; border: none !important; border-radius: 0 !important;">Đăng nhập</a>
+                <a href="{% url 'register:login' %}" class="btn" style="margin-right: 5px; width:105px; border: none !important; border-radius: 0 !important;">Đăng nhập</a>
             </div>
             <div class="form-inline my-2 my-lg-0">
-                <a href="{% url 'register:register' %}" class="btn" style = "margin-left: 5px;width:105px; border: none !important; border-radius: 0 !important;">Đăng ký</a>
+                <a href="{% url 'register:register' %}" class="btn" style ="width:105px; border: none !important; border-radius: 0 !important;">Đăng ký</a>
             </div>
             {% endif %}
 
@@ -187,7 +187,7 @@
             </p>
             <p style="text-align: justify;">
                 Để xem toàn bộ quy chế cuộc thi, vui lòng truy cập
-                <a style ="color:#4CF2D2;" target="_blank" href="https://drive.google.com/file/d/1rErKbMxKskTyqWUm8w-9lfKyr6WQ_wnI/view?usp=sharing"><b>tại đây</b></a>.
+                <a style ="color:#4CF2D2;" target="_blank" href="https://drive.google.com/file/d/17Vly7HvPSQXLs-Pe_QmAFmkpAS_Ezrmq/view?usp=sharing"><b>tại đây</b></a>.
             </p>
     </div>
 </section>
@@ -396,14 +396,14 @@
                             <div class="col-lg-6 col-md-6 col-sm-6 col-6">
                                 <div class="unit_fb">
                                     <a target="_blank" href="https://www.facebook.com/uit.ucpc">
-                                        <img src="{% static 'register/images/footer/FB.png' %}">
+                                        <img src="{% static 'register/images/footer/fb.png' %}">
                                     </a>
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-6 col-6">
                                 <div class="unit_gm">
                                     <a target="_blank" href="mailto:ucpc@uit.edu.vn">
-                                        <img src="{% static 'register/images/footer/Gmail.png' %}">
+                                        <img style="width: 50px"; src="{% static 'register/images/footer/gmail.png' %}">
                                     </a>
                                 </div>
                             </div>
