--- a/register/static/register/css/home.css
+++ b/register/static/register/css/home.css
@@ -341,12 +341,8 @@ color: white;
 
 #reward #total_reward h1
 {
-  font-size: 30px;
+  font-size: 2.5rem;
 }
-
-
-
-
 
 #reward .row #total_reward p
 {
