--- a/register/templates/login/login.html
+++ b/register/templates/login/login.html
@@ -17,7 +17,7 @@
 			{% csrf_token %}
 			{{ lf.as_p }}
 			<input id="checkbox_login" type="checkbox" style="margin: 10px 5px 10px 0;" onclick="showLoginPassword()">Hiển thị mật khẩu<br>
-			<button type="submit" class="btn btn-primary" style = "margin-top: 15px;">Đăng nhập</button>
+			<button type="submit" class="btn btn-primary" style = "margin-top: 15px; background-color: #4CF2D2; border-color: #4CF2D2; color: black;">Đăng nhập</button>
 		</form>
 	</div>
 </div>
