--- a/register/templates/register/home.html
+++ b/register/templates/register/home.html
@@ -220,7 +220,7 @@
 
 <!-- Lịch trình -->
 <div class="timeline" id="timeline">
-    <h1 class="head" style="margin-left: 20px; margin-bottom: 30px; font-weight: bold;">Lịch Trình</h1>
+    <h1 class="head" style="margin-left: 20px; margin-bottom: 30px; font-weight: bold;">Các mốc thời gian</h1>
     <div class="container left">
         <div class="date"></div>
         <!-- <i class="icon fa fa-home"></i> -->
@@ -276,7 +276,7 @@
         <div class="date"></div>
         <i class="icon fas fa-lock"></i>
         <div class="content">
-            <h2 style="font-weight: bold;">25/05 : ĐÓNG LINK ĐĂNG KÝ</h2>
+            <h2 style="font-weight: bold;">25/05 : HẠN CHÓT ĐĂNG KÝ</h2>
             <p>
 
             </p>
