style container message error

--- a/register/templates/login/login.html
+++ b/register/templates/login/login.html
@@ -7,7 +7,9 @@
 </div>
 
 {% for message in messages %}
-<p id="messages">{{message}}</p>
+<div class="container">
+	<p id="messages" style="margin: 0 0 15px 0;">{{message}}</p>
+</div>
 {% endfor %}
 
 <div class="form-group">
