--- a/register/templates/login/profile.html
+++ b/register/templates/login/profile.html
@@ -8,9 +8,8 @@
 
 {% for message in messages %}
 <div class="container">
-	<p id="messages">{{message}}</p>
+	<p id="messages" style="margin: 0 0 15px 0;">{{message}}</p>
 </div>
-
 {% endfor %}
 
 <div class="container">
