--- a/register/static/register/css/home.css
+++ b/register/static/register/css/home.css
@@ -506,7 +506,6 @@ border-radius: 8px;
   width: 100%;
 }
 
-
 #footer .contact .row{
   align-items: center;
   text-align: center;
@@ -613,6 +612,10 @@ border-radius: 8px;
 
   #reward #total_reward h1{
     font-size: 23px;
+  }
+
+  #timeline .head {
+    font-size: 2rem;
   }
 
   #footer h5
