--- a/register/templates/login/edit.html
+++ b/register/templates/login/edit.html
@@ -9,7 +9,9 @@
 <hr>
 
 {% for message in messages %}
-<p id="messages">{{message}}</p>
+<div class="container">
+	<p id="messages" style="margin: 0 0 15px 0;">{{message}}</p>
+</div>
 {% endfor %}
 
 <div class="form-group">
